syntax = "proto3";

import "Enums.proto";

option java_package = "hu.bme.mit.inf.modes3.messaging.mms.messages";
option java_multiple_files = true;

message SegmentState {
	uint32 segmentID = 1;
	SegmentStateValue state = 2;
}
